--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ services:
   - docker
 
 before_install:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker build -t nani/docker-react -f Dockerfile.dev .
 
 script:
