--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ deploy:
   bucket_path: "docker"
   on:
     branch: main
-  access_key_id: "AKIAZNPS54XCIJ62DQOC"
-  secret_access_key: "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"
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
