--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "ap-south-1b"
-  app: "Finance"
-  env: "Finance-env-1"
+  app: "docker-react"
+  env: "Dockerreact-env"
   bucket_name: "elasticbeanstalk-ap-south-1-647438919108"
   bucket_path: "docker"
   on:
